# data-science-mlp

./: .gitignore  Pipfile  README.md  pyproject.toml  text-colour-predictor-n-layer.ipynb  text-colour-predictor-simple.ipynb
data_science_mlp/: n_layer.py  rgb.py  text-colour-predictor-n-layer.ipynb  text-colour-predictor-simple.ipynb  two_layer.py
mlp/: README.md  text-colour-predictor-n-layer.ipynb  text-colour-predictor-simple.ipynb
multi-layer-perceptron/: mlp-2-layer.py  mlp-n-layer.py  text-colour-predictor-N-layer.ipynb  text-colour-predictor-simple.ipynb
multilayer-perceptron/: README.md  text-colour-predictor-n-layer.ipynb
notebooks/: text-colour-predictor-simple.ipynb
tests/: test_rgb.py
