[tool.poetry]
name = "data-science-mlp"
version = "0.1.0"
description = ""
authors = ["Rebekka Haley <rebekka.haley@gmail.com>"]
readme = "README.md"
packages = [{include = "data_science_mlp"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.0.0"
numpy = "^1.23.3"
pytest = "^7.1.3"
pandas = "^1.4.4"
matplotlib = "^3.5.3"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
pytest-cov = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
